[tool.poetry]
name = "c-tfidf-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tfidf_calculator"}]

[tool.poetry.dependencies]
python = "3.11.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
notebook = "^7.0.6"
sudachipy = "^0.6.7"
sudachidict-core = "^20230927"
pydantic = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
